--- a/src/css/linkBuilder.css
+++ b/src/css/linkBuilder.css
@@ -1,5 +1,5 @@
 .linkBlock {
-@apply p-6 border-2 rounded-lg;
+@apply p-6 rounded-lg border-transparent;
 }
 
 .blockStyle-default {
@@ -7,11 +7,11 @@
 }
 
 .blockStyle-light { 
-@apply bg-gray-100 border-gray-300;
+@apply bg-gray-200 ;
 }
 
 .blockStyle-dark {
-@apply bg-gray-700 border-gray-400 text-white;
+@apply bg-gray-700 text-white;
 }
 
 .blockStyle-dark a {
